--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -17,42 +17,42 @@ $angle-offset-y: -125px;
 $angle-width: 29px;
 $angle-height: 29px;
 $angle-total-width: 306px;
-$angle-total-height: 246px;
+$angle-total-height: 256px;
 $angle-image: '../images/sprite.png';
-$angle: (262px, 125px, -262px, -125px, 29px, 29px, 306px, 246px, '../images/sprite.png', 'angle', );
+$angle: (262px, 125px, -262px, -125px, 29px, 29px, 306px, 256px, '../images/sprite.png', 'angle', );
 $calendar-name: 'calendar';
-$calendar-x: 0px;
-$calendar-y: 66px;
-$calendar-offset-x: 0px;
-$calendar-offset-y: -66px;
+$calendar-x: 77px;
+$calendar-y: 58px;
+$calendar-offset-x: -77px;
+$calendar-offset-y: -58px;
 $calendar-width: 60px;
 $calendar-height: 60px;
 $calendar-total-width: 306px;
-$calendar-total-height: 246px;
+$calendar-total-height: 256px;
 $calendar-image: '../images/sprite.png';
-$calendar: (0px, 66px, 0px, -66px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'calendar', );
+$calendar: (77px, 58px, -77px, -58px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'calendar', );
 $chat-name: 'chat';
-$chat-x: 60px;
-$chat-y: 66px;
-$chat-offset-x: -60px;
-$chat-offset-y: -66px;
+$chat-x: 142px;
+$chat-y: 0px;
+$chat-offset-x: -142px;
+$chat-offset-y: 0px;
 $chat-width: 60px;
 $chat-height: 60px;
 $chat-total-width: 306px;
-$chat-total-height: 246px;
+$chat-total-height: 256px;
 $chat-image: '../images/sprite.png';
-$chat: (60px, 66px, -60px, -66px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'chat', );
+$chat: (142px, 0px, -142px, 0px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'chat', );
 $contract-name: 'contract';
 $contract-x: 142px;
-$contract-y: 0px;
+$contract-y: 60px;
 $contract-offset-x: -142px;
-$contract-offset-y: 0px;
+$contract-offset-y: -60px;
 $contract-width: 60px;
 $contract-height: 60px;
 $contract-total-width: 306px;
-$contract-total-height: 246px;
+$contract-total-height: 256px;
 $contract-image: '../images/sprite.png';
-$contract: (142px, 0px, -142px, 0px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'contract', );
+$contract: (142px, 60px, -142px, -60px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'contract', );
 $elem-bg-name: 'elem-bg';
 $elem-bg-x: 0px;
 $elem-bg-y: 0px;
@@ -61,42 +61,42 @@ $elem-bg-offset-y: 0px;
 $elem-bg-width: 77px;
 $elem-bg-height: 66px;
 $elem-bg-total-width: 306px;
-$elem-bg-total-height: 246px;
+$elem-bg-total-height: 256px;
 $elem-bg-image: '../images/sprite.png';
-$elem-bg: (0px, 0px, 0px, 0px, 77px, 66px, 306px, 246px, '../images/sprite.png', 'elem-bg', );
+$elem-bg: (0px, 0px, 0px, 0px, 77px, 66px, 306px, 256px, '../images/sprite.png', 'elem-bg', );
 $employee-name: 'employee';
-$employee-x: 142px;
-$employee-y: 60px;
-$employee-offset-x: -142px;
-$employee-offset-y: -60px;
+$employee-x: 0px;
+$employee-y: 136px;
+$employee-offset-x: 0px;
+$employee-offset-y: -136px;
 $employee-width: 60px;
 $employee-height: 60px;
 $employee-total-width: 306px;
-$employee-total-height: 246px;
+$employee-total-height: 256px;
 $employee-image: '../images/sprite.png';
-$employee: (142px, 60px, -142px, -60px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'employee', );
+$employee: (0px, 136px, 0px, -136px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'employee', );
 $group-name: 'group';
-$group-x: 0px;
-$group-y: 126px;
-$group-offset-x: 0px;
-$group-offset-y: -126px;
+$group-x: 60px;
+$group-y: 136px;
+$group-offset-x: -60px;
+$group-offset-y: -136px;
 $group-width: 60px;
 $group-height: 60px;
 $group-total-width: 306px;
-$group-total-height: 246px;
+$group-total-height: 256px;
 $group-image: '../images/sprite.png';
-$group: (0px, 126px, 0px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'group', );
+$group: (60px, 136px, -60px, -136px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'group', );
 $joystick-name: 'joystick';
-$joystick-x: 60px;
-$joystick-y: 126px;
-$joystick-offset-x: -60px;
-$joystick-offset-y: -126px;
+$joystick-x: 120px;
+$joystick-y: 136px;
+$joystick-offset-x: -120px;
+$joystick-offset-y: -136px;
 $joystick-width: 60px;
 $joystick-height: 60px;
 $joystick-total-width: 306px;
-$joystick-total-height: 246px;
+$joystick-total-height: 256px;
 $joystick-image: '../images/sprite.png';
-$joystick: (60px, 126px, -60px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'joystick', );
+$joystick: (120px, 136px, -120px, -136px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'joystick', );
 $myself-name: 'myself';
 $myself-x: 262px;
 $myself-y: 0px;
@@ -105,42 +105,64 @@ $myself-offset-y: 0px;
 $myself-width: 44px;
 $myself-height: 65px;
 $myself-total-width: 306px;
-$myself-total-height: 246px;
+$myself-total-height: 256px;
 $myself-image: '../images/sprite.png';
-$myself: (262px, 0px, -262px, 0px, 44px, 65px, 306px, 246px, '../images/sprite.png', 'myself', );
+$myself: (262px, 0px, -262px, 0px, 44px, 65px, 306px, 256px, '../images/sprite.png', 'myself', );
 $performance-name: 'performance';
-$performance-x: 120px;
-$performance-y: 126px;
-$performance-offset-x: -120px;
-$performance-offset-y: -126px;
+$performance-x: 202px;
+$performance-y: 0px;
+$performance-offset-x: -202px;
+$performance-offset-y: 0px;
 $performance-width: 60px;
 $performance-height: 60px;
 $performance-total-width: 306px;
-$performance-total-height: 246px;
+$performance-total-height: 256px;
 $performance-image: '../images/sprite.png';
-$performance: (120px, 126px, -120px, -126px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'performance', );
+$performance: (202px, 0px, -202px, 0px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'performance', );
 $pie-chart-name: 'pie-chart';
 $pie-chart-x: 202px;
-$pie-chart-y: 0px;
+$pie-chart-y: 60px;
 $pie-chart-offset-x: -202px;
-$pie-chart-offset-y: 0px;
+$pie-chart-offset-y: -60px;
 $pie-chart-width: 60px;
 $pie-chart-height: 60px;
 $pie-chart-total-width: 306px;
-$pie-chart-total-height: 246px;
+$pie-chart-total-height: 256px;
 $pie-chart-image: '../images/sprite.png';
-$pie-chart: (202px, 0px, -202px, 0px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'pie-chart', );
+$pie-chart: (202px, 60px, -202px, -60px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'pie-chart', );
+$play-big-name: 'play-big';
+$play-big-x: 0px;
+$play-big-y: 66px;
+$play-big-offset-x: 0px;
+$play-big-offset-y: -66px;
+$play-big-width: 70px;
+$play-big-height: 70px;
+$play-big-total-width: 306px;
+$play-big-total-height: 256px;
+$play-big-image: '../images/sprite.png';
+$play-big: (0px, 66px, 0px, -66px, 70px, 70px, 306px, 256px, '../images/sprite.png', 'play-big', );
+$play-name: 'play';
+$play-x: 262px;
+$play-y: 154px;
+$play-offset-x: -262px;
+$play-offset-y: -154px;
+$play-width: 20px;
+$play-height: 20px;
+$play-total-width: 306px;
+$play-total-height: 256px;
+$play-image: '../images/sprite.png';
+$play: (262px, 154px, -262px, -154px, 20px, 20px, 306px, 256px, '../images/sprite.png', 'play', );
 $plus-red-mini-name: 'plus-red--mini';
-$plus-red-mini-x: 262px;
+$plus-red-mini-x: 282px;
 $plus-red-mini-y: 154px;
-$plus-red-mini-offset-x: -262px;
+$plus-red-mini-offset-x: -282px;
 $plus-red-mini-offset-y: -154px;
 $plus-red-mini-width: 18px;
 $plus-red-mini-height: 18px;
 $plus-red-mini-total-width: 306px;
-$plus-red-mini-total-height: 246px;
+$plus-red-mini-total-height: 256px;
 $plus-red-mini-image: '../images/sprite.png';
-$plus-red-mini: (262px, 154px, -262px, -154px, 18px, 18px, 306px, 246px, '../images/sprite.png', 'plus-red--mini', );
+$plus-red-mini: (282px, 154px, -282px, -154px, 18px, 18px, 306px, 256px, '../images/sprite.png', 'plus-red--mini', );
 $plus-red-name: 'plus-red';
 $plus-red-x: 262px;
 $plus-red-y: 65px;
@@ -149,9 +171,9 @@ $plus-red-offset-y: -65px;
 $plus-red-width: 30px;
 $plus-red-height: 30px;
 $plus-red-total-width: 306px;
-$plus-red-total-height: 246px;
+$plus-red-total-height: 256px;
 $plus-red-image: '../images/sprite.png';
-$plus-red: (262px, 65px, -262px, -65px, 30px, 30px, 306px, 246px, '../images/sprite.png', 'plus-red', );
+$plus-red: (262px, 65px, -262px, -65px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus-red', );
 $plus-name: 'plus';
 $plus-x: 262px;
 $plus-y: 95px;
@@ -160,42 +182,42 @@ $plus-offset-y: -95px;
 $plus-width: 30px;
 $plus-height: 30px;
 $plus-total-width: 306px;
-$plus-total-height: 246px;
+$plus-total-height: 256px;
 $plus-image: '../images/sprite.png';
-$plus: (262px, 95px, -262px, -95px, 30px, 30px, 306px, 246px, '../images/sprite.png', 'plus', );
+$plus: (262px, 95px, -262px, -95px, 30px, 30px, 306px, 256px, '../images/sprite.png', 'plus', );
 $price-tag-name: 'price-tag';
 $price-tag-x: 202px;
-$price-tag-y: 60px;
+$price-tag-y: 120px;
 $price-tag-offset-x: -202px;
-$price-tag-offset-y: -60px;
+$price-tag-offset-y: -120px;
 $price-tag-width: 60px;
 $price-tag-height: 60px;
 $price-tag-total-width: 306px;
-$price-tag-total-height: 246px;
+$price-tag-total-height: 256px;
 $price-tag-image: '../images/sprite.png';
-$price-tag: (202px, 60px, -202px, -60px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'price-tag', );
+$price-tag: (202px, 120px, -202px, -120px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'price-tag', );
 $security-name: 'security';
-$security-x: 202px;
-$security-y: 120px;
-$security-offset-x: -202px;
-$security-offset-y: -120px;
+$security-x: 0px;
+$security-y: 196px;
+$security-offset-x: 0px;
+$security-offset-y: -196px;
 $security-width: 60px;
 $security-height: 60px;
 $security-total-width: 306px;
-$security-total-height: 246px;
+$security-total-height: 256px;
 $security-image: '../images/sprite.png';
-$security: (202px, 120px, -202px, -120px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'security', );
+$security: (0px, 196px, 0px, -196px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'security', );
 $team-name: 'team';
-$team-x: 0px;
-$team-y: 186px;
-$team-offset-x: 0px;
-$team-offset-y: -186px;
+$team-x: 60px;
+$team-y: 196px;
+$team-offset-x: -60px;
+$team-offset-y: -196px;
 $team-width: 60px;
 $team-height: 60px;
 $team-total-width: 306px;
-$team-total-height: 246px;
+$team-total-height: 256px;
 $team-image: '../images/sprite.png';
-$team: (0px, 186px, 0px, -186px, 60px, 60px, 306px, 246px, '../images/sprite.png', 'team', );
+$team: (60px, 196px, -60px, -196px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'team', );
 $withus-name: 'withus';
 $withus-x: 77px;
 $withus-y: 0px;
@@ -204,14 +226,14 @@ $withus-offset-y: 0px;
 $withus-width: 65px;
 $withus-height: 58px;
 $withus-total-width: 306px;
-$withus-total-height: 246px;
+$withus-total-height: 256px;
 $withus-image: '../images/sprite.png';
-$withus: (77px, 0px, -77px, 0px, 65px, 58px, 306px, 246px, '../images/sprite.png', 'withus', );
+$withus: (77px, 0px, -77px, 0px, 65px, 58px, 306px, 256px, '../images/sprite.png', 'withus', );
 $spritesheet-width: 306px;
-$spritesheet-height: 246px;
+$spritesheet-height: 256px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
-$spritesheet: (306px, 246px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $play-big, $play, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
+$spritesheet: (306px, 256px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
