--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -18,3 +18,5 @@
 @import "sections/ninth";
 @import "sections/tenth";
 @import "sections/eleventh";
+@import "sections/twelfth";
+@import "sections/thirteenth";
