--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -19,4 +19,8 @@ html(lang='ru')
         include sections/ninth
         include sections/tenth
         include sections/eleventh
+        include sections/twelfth
+        include sections/thirteenth
+        
+        
         
