--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -20,3 +20,5 @@
 @import "sections/eleventh";
 @import "sections/twelfth";
 @import "sections/thirteenth";
+@import "sections/fourteenth";
+@import "sections/fifteenth";
