add popup form 1

--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -42,6 +42,17 @@ $chat-total-width: 306px;
 $chat-total-height: 256px;
 $chat-image: '../images/sprite.png';
 $chat: (142px, 0px, -142px, 0px, 60px, 60px, 306px, 256px, '../images/sprite.png', 'chat', );
+$close-name: 'close';
+$close-x: 262px;
+$close-y: 154px;
+$close-offset-x: -262px;
+$close-offset-y: -154px;
+$close-width: 25px;
+$close-height: 25px;
+$close-total-width: 306px;
+$close-total-height: 256px;
+$close-image: '../images/sprite.png';
+$close: (262px, 154px, -262px, -154px, 25px, 25px, 306px, 256px, '../images/sprite.png', 'close', );
 $contract-name: 'contract';
 $contract-x: 142px;
 $contract-y: 60px;
@@ -143,26 +154,26 @@ $play-big-image: '../images/sprite.png';
 $play-big: (0px, 66px, 0px, -66px, 70px, 70px, 306px, 256px, '../images/sprite.png', 'play-big', );
 $play-name: 'play';
 $play-x: 262px;
-$play-y: 154px;
+$play-y: 179px;
 $play-offset-x: -262px;
-$play-offset-y: -154px;
+$play-offset-y: -179px;
 $play-width: 20px;
 $play-height: 20px;
 $play-total-width: 306px;
 $play-total-height: 256px;
 $play-image: '../images/sprite.png';
-$play: (262px, 154px, -262px, -154px, 20px, 20px, 306px, 256px, '../images/sprite.png', 'play', );
+$play: (262px, 179px, -262px, -179px, 20px, 20px, 306px, 256px, '../images/sprite.png', 'play', );
 $plus-red-mini-name: 'plus-red--mini';
-$plus-red-mini-x: 282px;
+$plus-red-mini-x: 287px;
 $plus-red-mini-y: 154px;
-$plus-red-mini-offset-x: -282px;
+$plus-red-mini-offset-x: -287px;
 $plus-red-mini-offset-y: -154px;
 $plus-red-mini-width: 18px;
 $plus-red-mini-height: 18px;
 $plus-red-mini-total-width: 306px;
 $plus-red-mini-total-height: 256px;
 $plus-red-mini-image: '../images/sprite.png';
-$plus-red-mini: (282px, 154px, -282px, -154px, 18px, 18px, 306px, 256px, '../images/sprite.png', 'plus-red--mini', );
+$plus-red-mini: (287px, 154px, -287px, -154px, 18px, 18px, 306px, 256px, '../images/sprite.png', 'plus-red--mini', );
 $plus-red-name: 'plus-red';
 $plus-red-x: 262px;
 $plus-red-y: 65px;
@@ -232,7 +243,7 @@ $withus: (77px, 0px, -77px, 0px, 65px, 58px, 306px, 256px, '../images/sprite.png
 $spritesheet-width: 306px;
 $spritesheet-height: 256px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($angle, $calendar, $chat, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $play-big, $play, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
+$spritesheet-sprites: ($angle, $calendar, $chat, $close, $contract, $elem-bg, $employee, $group, $joystick, $myself, $performance, $pie-chart, $play-big, $play, $plus-red-mini, $plus-red, $plus, $price-tag, $security, $team, $withus, );
 $spritesheet: (306px, 256px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
