--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -9,6 +9,13 @@ body {
   line-height: 1.25;
 }
 
+body.modal-open {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
