--- a/source/styles/sections/form_one.scss
+++ b/source/styles/sections/form_one.scss
@@ -60,3 +60,105 @@
         }
     }
 }
+
+.popup {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 10;
+    animation-name: fadePopup;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+
+    &__wrap,
+    &__submited {
+        position: relative;
+        width: 492px;
+        padding: 50px 0 48px;
+        border-radius: 4px;
+        background-color: #fff;
+        margin: 100px auto 0;
+    }
+
+    &__title {
+        font-family: "RoadRadio-Black";
+        font-size: 35px;
+        color: #000;
+        text-align: center;
+        margin: 0 0 23px;
+    }
+
+    &__content {
+        padding: 20px 60px 0;
+
+    }
+
+    &__form {
+        width: 100%;
+        padding: 0 0 28px;
+
+        input {
+            width: 100%;
+            height: 33px;
+            font-family: "Jura-DemiBold";
+            font-size: 20px;
+            border: none;
+            border-bottom: 2px solid #818181;
+            margin: 5px 0 22px;
+        }
+
+        button.button--red {
+            width: 100%;
+        }
+    }
+
+    &__note {
+        font-family: "Jura-DemiBold";
+        font-size: 15px;
+        color: #818181;
+    }
+
+    &__clouse {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        width: 25px;
+        height: 25px;
+        opacity: 0.4;
+        cursor: pointer;
+
+        span {
+            display: block;
+        }
+    }
+}
+
+.popup__submited {
+    display: none;
+    height: 200px;
+    text-align: center;
+}
+
+@-webkit-keyframes fadePopup {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadePopup {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
