--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -7,8 +7,8 @@ html(lang='ru')
         link(rel="stylesheet" href="css/main.min.css")
         title CyberX
     body
-        //- include sections/first
-        //- include sections/form_one
+        include sections/first
+        include sections/form_one
         //- include sections/second
         //- include sections/third
         //- include sections/fourth
@@ -21,8 +21,10 @@ html(lang='ru')
         //- include sections/eleventh
         //- include sections/twelfth
         //- include sections/thirteenth
-        include sections/fourteenth
-        include sections/fifteenth
+        //- include sections/fourteenth
+        //- include sections/fifteenth
+
+        script(src="/js/main.js")
         
         
         
