--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -9,11 +9,11 @@ html(lang='ru')
     body
         include sections/first
         include sections/form_one
-        //- include sections/second
+        //- //- include sections/second
         //- include sections/third
         //- include sections/fourth
-        //- include sections/fifth
-        //- include sections/form_too
+        include sections/fifth
+        include sections/form_too
         //- include sections/sixth
         //- include sections/eighth
         //- include sections/ninth
