--- a/source/template/sections/form_too.pug
+++ b/source/template/sections/form_too.pug
@@ -5,5 +5,5 @@
                 .form_too__title
                     | проверьте, свободен ли Ваш город?
                 .form_too__button
-                    button.button--red
+                    button(id="popup_2").button--red
                         span Проверить
